<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ovidja</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="search_database_hint">Search Database</string>
    <string name="search_button">Search</string>
    <string name="hello_world">Videogame Details</string>
    <string name="consoleHead">Console:</string>
    <string name="releaseDateHead">Release Date:</string>
    <string name="esrbHead">ESRB Rating:</string>
    <string name="edit_collection_button">Edit Collection</string>
    <string name="title_activity_edit_collection">Edit Collection</string>
    <string name="incomplete_def_head">Incomplete</string>
    <string name="incomplete_def_body">You have not reached the game\'s ending credits</string>
    <string name="beat_def_head">Beat</string>
    <string name="beat_def_body">You have reached the game\'s ending credits</string>
    <string name="complete_def_head">Complete</string>
    <string name="complete_def_body">You have done everything that can be done</string>
    <string name="incomplete_button">Mark Incomplete</string>
    <string name="beat_button">Mark Beat</string>
    <string name="complete_button">Mark Complete</string>
    <string name="unowned_def_head">Unowned</string>
    <string name="unowned_def_body">You do not own this game</string>
    <string name="unowned_button">Mark Unowned</string>
    <string name="status_head">Completion Status:</string>
    <string name="metrics_title">Collection Data</string>

</resources>
